Add GetStandardTemplate method and update project metadata
- Introduced `GetStandardTemplate` in `DocxTemplateHelper.cs` to load Wordprocessing documents from resource streams, with error handling and optional content cleaning.
- Updated project metadata in `Markdig.Renderers.Docx.csproj` to reflect new author and repository details after forking.
- Refactored `ToDocxStream` in `MarkdownExtensions.cs` to utilize the new template method, improving resource management and stream handling.

--- a/src/Markdig.Renderers.Docx/Markdig.Renderers.Docx.csproj
+++ b/src/Markdig.Renderers.Docx/Markdig.Renderers.Docx.csproj
@@ -7,14 +7,14 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>Markdig.Renderers.Docx</Title>
-        <Authors>morincer</Authors>
-        <Description>A docx renderer allows outputing Markdown-formatted text into Microsoft Word .docx documents </Description>
-        <PackageProjectUrl>https://github.com/morincer/markdig.docx</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/morincer/markdig.docx/blob/main/LICENSE</PackageLicenseUrl>
-        <RepositoryUrl>https://github.com/morincer/markdig.docx</RepositoryUrl>
+        <Authors>Marcostox</Authors>
+        <Description>A docx renderer allows outputing Markdown-formatted text into Microsoft Word .docx documents fork by Marcostox </Description>
+        <PackageProjectUrl>https://github.com/Marcostox/markdig.docx</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/Marcostox/markdig.docx/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/Marcostox/markdig.docx</RepositoryUrl>
         <PackageTags>Markdig Docx Word</PackageTags>
-        <PackageId>Morincer.Markdig.Renderers.Docx</PackageId>
-        <Version>1.0.1</Version>
+        <PackageId>Marcostox.Markdig.Renderers.Docx</PackageId>
+        <Version>1.0.3</Version>
     </PropertyGroup>
 
     <ItemGroup>
